algorithmic-arena/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: nextjs
          image: 100xdevs/algo-arena:1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /dev/problems
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge0-api
  labels:
    app: judge0-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge0-api
  template:
    metadata:
      labels:
        app: judge0-api
    spec:
      containers:
        - name: judge0-api
          image: judge0/api
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-storage
              mountPath: /dev/problems
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge0-workers-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: judge0-workers
  template:
    metadata:
      labels:
        app: judge0-workers
    spec:
      containers:
        - name: judge0-worker
          image: judge0/api
          command: ["./scripts/workers"]
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
          volumeMounts:
            - name: problems-volume
              mountPath: /dev/problems
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
