algorithmic-arena/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: ClusterIP
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: judge0-api-service
spec:
  type: ClusterIP
  selector:
    app: judge0-api
  ports:
    - port: 8080
      targetPort: 8080
